--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,9 @@
-{"compilerOptions":{"allowJs":true},"exclude":["node_modules"]}
+{
+    "compilerOptions": {
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true
+    },
+    "exclude": [
+        "node_modules"
+    ]
+}
