--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "bugsnag-react-native": "^1.1.4",
     "moment": "^2.15.1",
     "native-base": "^0.5.9",
     "react": "15.4.1",
