--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "LifeApi",
-  "version": "1.0.0",
+  "name": "lifeapi",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
